fixed footer alignment bug

--- a/web/packages/realtor/css/app.css
+++ b/web/packages/realtor/css/app.css
@@ -395,7 +395,6 @@ section.footer {
   padding-top: 55px !important;
   color: #9b8c86;
   overflow: hidden;
-  max-width: 1250px;
   text-align: center;
   border-top: 1px solid #e4e3e3; }
   section.footer ul {
