--- a/web/packages/realtor/css/src/components/footer.scss
+++ b/web/packages/realtor/css/src/components/footer.scss
@@ -1,4 +1,4 @@
-section.footer { height: 100%;padding-top: 55px !important;color: $theme-color-brown; overflow: hidden;max-width: 1250px;text-align: center;border-top: 1px solid $theme-line-color;
+section.footer { height: 100%;padding-top: 55px !important;color: $theme-color-brown; overflow: hidden;text-align: center;border-top: 1px solid $theme-line-color;
     ul { margin: 0;padding: 0 0 35px 0;
         li a { color: $theme-color-brown;
             &:hover { color: $theme-color-darkred; }
